test/corpus/members.txt
================================================================================
ivar member
================================================================================

class Foo
  @foo: String
end

--------------------------------------------------------------------------------

(program
  (decl
    (class_decl
      (class_name
        (constant))
      (members
        (member
          (ivar_member
            (ivar_name)
            (type
              (class_type
                (class_name
                  (constant))))))))))

================================================================================
method member
================================================================================

class Foo
  def foo: () -> Integer
end

--------------------------------------------------------------------------------

(program
  (decl
    (class_decl
      (class_name
        (constant))
      (members
        (member
          (method_member
            (method_name
              (identifier))
            (method_types
              (method_type
                (method_type_body
                  (parameters)
                  (type
                    (class_type
                      (class_name
                        (constant)))))))))))))

================================================================================
singleton method member
================================================================================

class Foo
  def self.foo: () -> Integer
end

--------------------------------------------------------------------------------

(program
  (decl
    (class_decl
      (class_name
        (constant))
      (members
        (member
          (method_member
            (self)
            (method_name
              (identifier))
            (method_types
              (method_type
                (method_type_body
                  (parameters)
                  (type
                    (class_type
                      (class_name
                        (constant)))))))))))))

================================================================================
attribute member
================================================================================

class Foo
  attr_reader foo: String
end

--------------------------------------------------------------------------------

(program
  (decl
    (class_decl
      (class_name
        (constant))
      (members
        (member
          (attribute_member
            (attribyte_type)
            (method_name
              (identifier))
            (type
              (class_type
                (class_name
                  (constant))))))))))

================================================================================
attribute member with ivar
================================================================================

class Foo
  attr_writer name (@raw_name): String
end

--------------------------------------------------------------------------------

(program
  (decl
    (class_decl
      (class_name
        (constant))
      (members
        (member
          (attribute_member
            (attribyte_type)
            (method_name
              (identifier))
            (ivar_name)
            (type
              (class_type
                (class_name
                  (constant))))))))))

================================================================================
attribute member for singleton
================================================================================

class Foo
  attr_writer self.name: String
end

--------------------------------------------------------------------------------

(program
  (decl
    (class_decl
      (class_name
        (constant))
      (members
        (member
          (attribute_member
            (attribyte_type)
            (self)
            (method_name
              (identifier))
            (type
              (class_type
                (class_name
                  (constant))))))))))

================================================================================
include member
================================================================================

class Foo
  include Mod
end

--------------------------------------------------------------------------------

(program
  (decl
    (class_decl
      (class_name
        (constant))
      (members
        (member
          (include_member
            (class_name
              (constant))))))))

================================================================================
extend member
================================================================================

class Foo
  extend Mod
end

--------------------------------------------------------------------------------

(program
  (decl
    (class_decl
      (class_name
        (constant))
      (members
        (member
          (extend_member
            (class_name
              (constant))))))))

================================================================================
prepend member
================================================================================

class Foo
  prepend Mod
end

--------------------------------------------------------------------------------

(program
  (decl
    (class_decl
      (class_name
        (constant))
      (members
        (member
          (prepend_member
            (class_name
              (constant))))))))

================================================================================
alias member
================================================================================

class Foo
  alias bar foo
end

--------------------------------------------------------------------------------

(program
  (decl
    (class_decl
      (class_name
        (constant))
      (members
        (member
          (alias_member
            (method_name
              (identifier))
            (method_name
              (identifier))))))))

================================================================================
visibility member
================================================================================

class Foo
  private
  def foo: () -> Integer
  public def hoge: () -> Integer
  private attr_reader bar: String
end

--------------------------------------------------------------------------------

(program
  (decl
    (class_decl
      (class_name
        (constant))
      (members
        (member
          (visibility_member
            (visibility)))
        (member
          (method_member
            (method_name
              (identifier))
            (method_types
              (method_type
                (method_type_body
                  (parameters)
                  (type
                    (class_type
                      (class_name
                        (constant)))))))))
        (member
          (method_member
            (visibility)
            (method_name
              (identifier))
            (method_types
              (method_type
                (method_type_body
                  (parameters)
                  (type
                    (class_type
                      (class_name
                        (constant)))))))))
        (member
          (attribute_member
            (visibility)
            (attribyte_type)
            (method_name
              (identifier))
            (type
              (class_type
                (class_name
                  (constant))))))))))
